# devoir_3_dionne_leblanc

./: OHQ_wrapper.py  README.md  mef.py  methode_tir.py  mt.py  pyproject.toml  rapport_Schrodinger.ipynb
