[tool.poetry]
name = "td-jl-dev3-phq404"
version = "0.1.0"
description = "Troisième devoir de PHQ404"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "td_jl_dev3_phq404"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
scipy = "^1.10.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
