[tool.poetry]
name = "td-jl-dev3-phq404"
version = "0.1.0"
description = ""
authors = ["Theo N. Dionne <theo.nathaniel.dionne@usherbrooke.ca>"]
readme = "README.md"
packages = [{include = "td_jl_dev3_phq404"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scipy = "^1.10.1"
numpy = "^1.22"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
